# dynairxvis

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: conf.py  dynairxvis.rst  get_started.rst  index.rst  modules.rst  plot.rst  plotgrid.rst  radar.rst
dynairxvis/: __init__.py  bar.py  box.py  calendar.py  dot.py  gantt.py  heatmap.py  hist.py  main.py  pie.py  plot.py  plotgrid.py  radar.py  scatter.py  time.py  utils.py  violin.py
notebooks/: GetStarted.ipynb  get_started.ipynb
tests/: test_bar.py  test_box.py  test_calendar.py  test_dot.py  test_gantt.py  test_heatmap.py  test_hist.py  test_main.py  test_pie.py  test_plot.py  test_plot_charts.py  test_plotgrid.py  test_radar.py  test_scatter.py  test_time.py  test_utils.py  test_violin.py
