[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynairxvis"
version = "0.1.0"
description = "A Python package for DynAIRx visualization."
authors = [{ name = "Layik Hama", email = "l.hama@leeds.ac.uk" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["visualization", "EHR"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Your package dependencies, e.g., "numpy>=1.19.2",
]
