[tool.poetry]
name = "dynairxvis"
version = "0.1.0"
description = "Python package for DynAIRx visualization"
authors = ["Layik Hama <layik.hama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.2.6"
pydata-sphinx-theme = "^0.15.2"
myst-parser = "^2.0.0"
pytest = "^8.1.1"
notebook = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
