[tool.poetry]
name = "dynairxvis"
version = "0.1.0"
description = "Python package for DynAIRx visualization"
authors = ["Layik Hama <layik.hama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
tomli = "^2.0.1"

[tool.poetry.extras]
notebooks = ["notebook", "matplotlib"]
doc = ["Sphinx", "pydata-sphinx-theme", "myst-parser", "matplotlib"]
test = ["pytest"]
all = ["notebook", "matplotlib", "Sphinx", "pydata-sphinx-theme", "pytest", "myst-parser"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
